# py-website-capture

./: .gitignore  Makefile  README.rst  requirements.freeze.txt  setup.cfg
drivers_tests/: conftest.py
drivers_tests/001_base/: test_001_demo.py
drivers_tests/002_selenium/: test_001_firefox.py  test_002_chrome.py
page_tests/: .gitignore  Makefile  README.rst  __init__.py  boussole.json  requirements.txt
page_tests/locale/en_US/LC_MESSAGES/: messages.po
page_tests/locale/fr_FR/LC_MESSAGES/: messages.po
page_tests/pages/: __init__.py  index.py  page.py
page_tests/settings/: __init__.py  production.py  webassets_filters.py
page_tests/sources/js/: main.js
page_tests/sources/js/foundation/: vendor.js
page_tests/sources/js/foundation/plugins/: foundation.abide.js  foundation.accordion.js  foundation.accordionMenu.js  foundation.core.js  foundation.drilldown.js  foundation.dropdown.js  foundation.dropdownMenu.js  foundation.equalizer.js  foundation.interchange.js  foundation.magellan.js  foundation.offcanvas.js  foundation.orbit.js  foundation.responsiveAccordionTabs.js  foundation.responsiveMenu.js  foundation.responsiveToggle.js  foundation.reveal.js  foundation.slider.js  foundation.smoothScroll.js  foundation.sticky.js  foundation.tabs.js  foundation.toggler.js  foundation.tooltip.js  foundation.util.box.js  foundation.util.imageLoader.js  foundation.util.keyboard.js  foundation.util.mediaQuery.js  foundation.util.motion.js  foundation.util.nest.js  foundation.util.timer.js  foundation.util.touch.js  foundation.util.triggers.js
page_tests/sources/sass/scss/: main.scss
page_tests/sources/sass/scss/components/: _content.scss  _footer.scss  _header.scss
page_tests/sources/sass/scss/settings/: _colors.scss  (+2 more)
page_tests/sources/templates/: console-log.basic.html  every-logs.basic.html  index.html  javascript-error.basic.html  lorem-ipsum.basic.html  out-of-viewport.html  page.html  skeleton.html
tests/: conftest.py  test_base.py  test_conf.py  test_interface_base.py  test_interface_dummy.py
tests/010_interface/: test_001_base.py  test_002_logs.py  test_003_dummy.py  test_020_report.py  test_030_processing.py
tests/100_cli/: test_001_version.py  test_002_capture.py
website_capture/: __init__.py  conf.py  exceptions.py  settings.py
website_capture/cli/: capture.py  console_script.py  screenshot.py  version.py
website_capture/interfaces/: __init__.py  base.py  dummy.py  selenium_interface.py  splinter_interface.py
website_capture/processors/: __init__.py  base.py  dummy.py
