;;
;; Richie package
;;
[metadata]
name = py-website-capture
version = 0.1.0
description = A tool to make website page captures
long_description = file:README.rst
long_description_content_type = text/x-rst
author = David Thenon
author_email = sveetch@gmail.com
url = https://github.com/sveetch/py-website-capture
license = MIT
keywords = Python, Selenium, WebDriver, Screenshot, Website
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3

[options]
include_package_data = True
install_requires =
    six
    selenium==3.141.0
    splinter==0.10.0
packages = find:
zip_safe = True

[options.extras_require]
dev =
    flake8
    pytest

[options.packages.find]
where = .
exclude=
    data
    docs
    tests
    outputs

[wheel]
universal = 1

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
exclude =
    .git,
    .venv,
    build,
    venv,
    __pycache__,
    */migrations/*

[tool:pytest]
addopts = -vv
python_files =
    *.py
testpaths =
    tests
