;;
;; py-website-capture package
;;
[metadata]
name = py-website-capture
version = 0.3.0
description = A tool able to capture content from web pages
long_description = file:README.rst
long_description_content_type = text/x-rst
author = David Thenon
author_email = sveetch@gmail.com
url = https://github.com/sveetch/py-website-capture
license = MIT
keywords = Python, Selenium, WebDriver, Screenshot, Website
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3

[options]
include_package_data = True
install_requires =
    six
    selenium==3.141.0
packages = find:
zip_safe = True

[options.extras_require]
cli =
    click>=7.0,<8.0
    colorama
    colorlog
dev =
    flake8
    pytest
    requests

[options.packages.find]
where = .
exclude=
    data
    docs
    tests
    outputs

[options.entry_points]
console_scripts =
    website-capture = website_capture.cli.console_script:cli_frontend

[wheel]
universal = 1

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
exclude =
    .git,
    .venv,
    build,
    venv,
    __pycache__,

[tool:pytest]
addopts = -vv
python_files =
    *.py
testpaths =
    tests
